--- a/gb/25/6/4/n14524269.md
+++ b/gb/25/6/4/n14524269.md
@@ -3,16 +3,15 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>顶级手表耳环法拍登场 不到千万就入手</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2025/06/id14524273-770952-600x400.jpg" />
-<h6>士林分署拍卖爱马仕钻表。（士林分署提供）
-</h6>
+<h6>士林分署拍卖爱马仕钻表。（士林分署提供）</h6>
 <hr>
 <p>【大纪元2025年06月04日讯】（大纪元记者宋顺澈台湾新北市报导） 法务部行政执行署士林分署（下称士林分署）订于114年6月10日(星期二)上午10时许，在士林分署一楼拍卖室举办第二场“名牌精品拍卖会”。本次拍卖标的为台○集团前董事长沈○雄遭诈骗案所查扣之财物，涵盖爱马仕、LV、香奈儿、CUGGI、DIOR等品牌的高级包款、耳环、饰品、画作及日用品等42件(详细物件清单，请扫描下方QR code查询)，只要出价最高且达底价1/2，即有机会将心仪物件带回家！</p>
 <p>本件系由台湾台北地方检察署检察官侦办罗姓被告所涉诈欺案，查扣其以不法所得购买之高档精品，并嘱托士林分署依法变价拍卖。首场拍卖会于同年5月20日成功拍定106件，惟仍有42件精品标的尚未拍出，将于本次再行公开拍卖。其中最受瞩目的为市价近新台币(下同)2千万元之DIOR手表暨耳环套组，结合璀璨宝石与精致工艺，艺术价值极高，本次拍卖价格不到千万元，即有机会购得。此外，2只爱马仕钻表及1只LV钻石项链，皆仅需数十万元，就有机会标走。另有6件知名艺术家林海容之画作，如《唱尽人间QQ事》、《革命舞者》、《练气功》等，均具艺术性与收藏价值。无论是喜爱名牌精品或是希望以实惠价格购得高品质物件者，千万不要错过！</p>
-<figure id="attachment_14524272" aria-describedby="caption-attachment-14524272" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/06/id14524272-770951.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14524272" src="https://i.epochtimes.com/assets/uploads/2025/06/id14524272-770951-600x590.jpg" alt="" width="600" b="590" /></a><figcaption id="caption-attachment-14524272" class="wp-caption-text">士林分署拍卖市价近二千万元的DIOR手表暨耳环套组。（士林分署提供）</figcaption></figure>
-<figure id="attachment_14524271" aria-describedby="caption-attachment-14524271" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/06/id14524271-770950.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14524271" src="https://i.epochtimes.com/assets/uploads/2025/06/id14524271-770950-600x849.jpg" alt="" width="600" b="849" /></a><figcaption id="caption-attachment-14524271" class="wp-caption-text">士林分署6月10日“名牌精品拍卖会”海报（士林分署提供）</figcaption></figure>
-<figure id="attachment_14524270" aria-describedby="caption-attachment-14524270" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/06/id14524270-770949.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14524270" src="https://i.epochtimes.com/assets/uploads/2025/06/id14524270-770949-600x300.jpg" alt="" width="600" b="300" /></a><figcaption id="caption-attachment-14524270" class="wp-caption-text">GUCCI、LV、DIOR等知名品牌包款。（士林分署提供）</figcaption></figure>
+<figure id="attachment_14524272" aria-describedby="caption-attachment-14524272" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/06/id14524272-770951.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-large wp-image-14524272" src="https://i.epochtimes.com/assets/uploads/2025/06/id14524272-770951-600x590.jpg" alt="" width="600" b="590"></a><figcaption id="caption-attachment-14524272" class="wp-caption-text">士林分署拍卖市价近二千万元的DIOR手表暨耳环套组。（士林分署提供）</figcaption></figure>
+<figure id="attachment_14524271" aria-describedby="caption-attachment-14524271" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/06/id14524271-770950.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-large wp-image-14524271" src="https://i.epochtimes.com/assets/uploads/2025/06/id14524271-770950-600x849.jpg" alt="" width="600" b="849"></a><figcaption id="caption-attachment-14524271" class="wp-caption-text">士林分署6月10日“名牌精品拍卖会”海报（士林分署提供）</figcaption></figure>
+<figure id="attachment_14524270" aria-describedby="caption-attachment-14524270" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/06/id14524270-770949.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-large wp-image-14524270" src="https://i.epochtimes.com/assets/uploads/2025/06/id14524270-770949-600x300.jpg" alt="" width="600" b="300"></a><figcaption id="caption-attachment-14524270" class="wp-caption-text">GUCCI、LV、DIOR等知名品牌包款。（士林分署提供）</figcaption></figure>
 <p>士林分署特别提醒，本次拍卖会将于6月10日(星期二)上午9时整开放登记，至上午10时截止。应买人凭身份证办理登记，始得领取号码牌入场参与竞标。拍卖自上午10时整开始，拍定人须当场支付拍定价金，付款方式可选择“现金”或“信用卡刷卡”。惟若“单笔”拍定金额达“50万元”以上，且选择以“现金”缴纳者，需改以“汇款”方式办理，请有兴趣参与竞标的民众注意！</p>
-<p>(网址：http://www.sly.moj.gov.tw)</p>
+<p>(网址：https://www.sly.moj.gov.tw)</p>
 <p>责任编辑：玉珍</p>
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/3/25/n14210121.md#1">梅西百货第49届花展盛大开幕：曼哈顿旗舰店向“Miss Dior”致敬</a></li>
@@ -22,32 +21,31 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/20/n14513631.md#1">打诈爱民日 法务部首次主槌精品拍卖会</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/25/n14517183.md#1">王净前进南法LV大秀 与多国女演员开心互动</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/28/n14519660.md#1">土地女装精品 士林分署多元丰富拍卖会</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539297.md#1">中配除籍证明 陆委会：2237人未与政府联系</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539300.md#1">观光署携手运研所 优化公共运输与永续观光旅游</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539243.md#1">AI引发少年自杀 立委吁基本法纳儿少风险机制</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650359.md#1">蓝推中天条款跳过委员会 民进党团批修法粗暴</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650384.md#1">小红书封禁舆论反弹 八炯：民众在乎感受不是法条</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649472.md#1">让台湾味工艺走向世界 “2025台湾工艺奖特展”开幕</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/2/25/n11070799.md#1" target="_blank">林辉：因如此荒诞理由 他们成为了“右派”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/5/13/n7893575.md#1" target="_blank">专家看万人游行：法轮功在世界舞台令人注目</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/1/n11356564.md#1" target="_blank">共产暴政录：三区叛乱和侵华日军攻势协调进行</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/2/n11157870.md#1" target="_blank">中共强摘器官 芬兰议会九议员吁惩罚罪犯</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/28/n14519658.md#1">大唐翰墨端严遒美 笔走龙蛇奔放飘逸（下）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/30/n14520991.md#1">【古道人生】善恶有报 报答来自另外空间 报答来自二十年后</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533725.md#1">李渊宠妃搅弄风云 李世民无端遭诬陷 忍辱不争</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/21/n14535826.md#1">【未解之谜】灵界能力觉醒 美国女子看到幽灵与彩色光环</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/15/n14531481.md#1">辛劳十余年 老仆扶养辞世主子三女长大 未曾一睹芳容</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539509.md#1">【直播】皮戈特主持国务院简报会（6/26）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539444.md#1">【直播】纽约市长亚当斯就竞选连任发表声明</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539478.md#1">【演员专访】神韵明星：连旭</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/24/n14537991.md#1">一线白酒遇冷 千元系列茅台“卖一瓶亏一瓶”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538134.md#1">极速充电电池问世 电动车充满电仅18秒</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538094.md#1">消息指习首度缺席金砖峰会 引猜测</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538624.md#1">《名侦探柯南 独眼的残像》影评：毛利小五郎大出风头</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/26/n14539072.md#1">《F1电影》制作成本高 全球首映票房预测出炉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538823.md#1">成本过亿 小沈阳新片上映3天票房仅7.6万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/23/n14537160.md#1">雪妮丈夫唐佳坠楼身亡 两人恩爱逾半个世纪</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538764.md#1">女主角涉高考造假遭封杀 吴京《镖人》陷危局</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538690.md#1">7种过期调味品千万别吃！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538188.md#1">夏天在花园里用这一物 可赶走恼人的蚊子</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/24/n14537581.md#1">什么是FOMO？ 为何这种习惯具有破坏力？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/19/n14535109.md#1">癌症跟情绪息息相关 教授亲授抗癌成功关键</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/21/n14535849.md#1">改善前列腺肥大与尿频 教你食疗按摩及运动</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651592.md#1">【直播】反对中共活摘器官和侵犯人权行为论坛</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651956.md#1">【直播】听证会：保护儿童免受网络犯罪分子侵害</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651951.md#1">【军事情报局】东南亚爆发战争 泰国攻入柬埔寨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638627.md#1">中产阶级想成为富人 需避免五大消费习惯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650329.md#1">十年来首次降价 五粮液开票价每瓶下调119元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/6/4/n14524269.htm">顶级手表耳环法拍登场 不到千万就入手</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/6/4/n14524269.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
