--- a/gb/25/1/12/n14411723.md
+++ b/gb/25/1/12/n14411723.md
@@ -20,18 +20,12 @@
 <p>副县长邱俐俐表示，恭贺各位得奖的杰出农民及农会优秀人员，感谢狮潭乡农会一直全力配合政府推广农业政策，积极办理活动行销当地农特产，设立狮农小铺，提供更多农特产品行销管道，办理县级柑橘评鉴及狮潭乡草莓评鉴，评鉴不只能助行销农产，提供消费者采买参考，也是农友技术交流的一个平台，今年县府会继续和农会及公所一起活络地方经济，感谢大家的支持和配合，狮潭乡的农产品质随着大家的努力越来越好!也祝福农会业务能持续稳健成长。</p>
 <p>责任编辑：玉珍</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/20/n11126691.md#1">2019年度宜兰县庆祝农民节表扬杰出农民</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/4/n13922528.md#1">南庄乡各界欢庆农民节 县长颁奖表扬杰出农民</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/3/n14217380.md#1">嘉市各界庆祝2024年农民节 表扬杰出农民</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/27/n14399146.md#1">陈清波文教基金会寒冬送暖颁发奖学金 年节礼金加码过好年</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/7/n14408421.md#1">侨委会奖学金申请开跑 鼓励侨生赴台湾深造</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/8/n14408986.md#1">【推荐】想让孩子入读名校、精英中学、获得私校奖学金？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/27/n14644257.md#1">灌肠不当恐致命 便秘男子直肠破裂引发严重腹膜炎</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/27/n14644237.md#1">南投陶艺家曾树枝 获台湾陶艺薪传成就奖</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/27/n14644239.md#1">定期检查家用电器与线路 远离冬季火灾威胁</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/26/n14643560.md#1">雪霸儿童故事图画书创作冬令营 12/8开放报名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414940.md#1">农民工讨薪 厦门象屿集团动用高压水枪驱逐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568122.md#1">四川江油校园霸凌引发大规模抗议 海外声援</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569378.md#1">【纪元焦点】白纸运动未远 江油抗争已起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627448.md#1">海南国企偷砍农户槟榔树 引发警民冲突</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/16/n10061771.md#1" target="_blank">共产暴政录：拼音化与简化汉字</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/4/6/n7526736.md#1" target="_blank">绝处逢生 令药学业同行目瞪口呆的神迹</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/7/n10620856.md#1" target="_blank">历经磨难的学者——吴门三大右派</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/13/1/23/n3784118.md#1" target="_blank">他山：中共政法委的罪恶与政法系统人员的赎罪</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
